--- a/src/i18next/locales/no/translation.json
+++ b/src/i18next/locales/no/translation.json
@@ -1,4 +1,6 @@
 {
-    "test": "Dette er en test",
-    "kake": "Og et eksempel på hvordan sette dette opp"
+    "eksempel":{
+        "test": "Dette er en test",
+        "kake": "Og et eksempel på hvordan sette dette opp"
+    }
 }
