more to the footer

--- a/src/i18next/locales/en/translation.json
+++ b/src/i18next/locales/en/translation.json
@@ -17,5 +17,8 @@
         "title": "This is Mars title",
         "titleSubtext": "Mars is the planet",
         "textRotation": "This is a text about mars rotation"
+    },
+    "Footer":{
+        "MadeBy": "Made by:"
     }
 }
