--- a/src/i18next/locales/no/translation.json
+++ b/src/i18next/locales/no/translation.json
@@ -2,5 +2,8 @@
     "eksempel":{
         "test": "Dette er en test",
         "kake": "Og et eksempel på hvordan sette dette opp"
+    },
+    "Footer":{
+        "MadeBy": "Laget av:"
     }
 }
