Navbar text. React router setup. Test css deleted

--- a/src/i18next/locales/en/translation.json
+++ b/src/i18next/locales/en/translation.json
@@ -1,4 +1,11 @@
 {
+    "Navbar": {
+        "title": "Solarsystem",
+        "mainPage": "Main page",
+        "ourSolarsystem": "Our solarsystem",
+        "planets": "Planets",
+        "contact": "Contact us"
+    },
     "Eksempel": {
         "test": "this is a test",
         "kakeErGodt": "I like cake"
