Updated page text

--- a/src/i18next/locales/en/translation.json
+++ b/src/i18next/locales/en/translation.json
@@ -45,7 +45,7 @@
     "factsSpeed": "Average speed: 13.07 km/s",
     "factsMass": "Mass: 2.5 times the mass of all other planets in the solar system combined",
     "factsEquatorRadius": "Equatorradius: 71 492 km",
-    "source": "Retrieved: 11. oktober 2022 from https://no.wikipedia.org/wiki/Jupiter"
+    "source": "Retrieved: October 11th 2022 from https://no.wikipedia.org/wiki/Jupiter"
   },
 
   "Saturn": {
@@ -60,7 +60,7 @@
     "factsRings": "Main rings: 9",
     "factsSpeed": "Average speed: 9.69 km/s",
     "factsMoons": "Moons: 82",
-    "source": "Retrieved: 11. oktober 2022 from https://no.wikipedia.org/wiki/Saturn"
+    "source": "Retrieved: October 11th 2022 from https://no.wikipedia.org/wiki/Saturn"
   },
 
   "Footer": {
