--- a/src/i18next/locales/en/translation.json
+++ b/src/i18next/locales/en/translation.json
@@ -2,7 +2,7 @@
   "Navbar": {
     "title": "Solarsystem",
     "mainPage": "Main page",
-    "ourSolarsystem": "Our solarsystem",
+    "ourSun": "Our sun",
     "planets": "Planets",
     "contact": "Contact us"
   },
