--- a/src/i18next/locales/no/translation.json
+++ b/src/i18next/locales/no/translation.json
@@ -2,7 +2,7 @@
   "Navbar": {
     "title": "Solsystemet",
     "mainPage": "Forsiden",
-    "ourSolarsystem": "Vårt solsystem",
+    "ourSun": "Vår sol",
     "planets": "Planetene",
     "contact": "Kontakt oss"
   },
