--- a/src/i18next/locales/no/translation.json
+++ b/src/i18next/locales/no/translation.json
@@ -9,7 +9,8 @@
 
   "Sun": {
     "title": "Solen",
-    "titleSubtext": "Solen vår er en 4,5 milliarder år gammel stjerne - en varm glødende ball av hydrogen og helium i sentrum av solsystemet vårt."
+    "titleSubtext": "Solen vår er en 4,5 milliarder år gammel stjerne - en varm glødende ball av hydrogen og helium i sentrum av solsystemet vårt.",
+    "age": "Hvor gammel solen er kan relateres til de tidlige stadiene av dannelsen av solsystemet. Solens alder er nær solsystemets alder, anslått til å være rundt 4,6 milliarder år gammel."
   },
 
   "Earth": {
