--- a/src/i18next/locales/no/translation.json
+++ b/src/i18next/locales/no/translation.json
@@ -14,7 +14,7 @@
   },
 
   "Earth": {
-    "title": "Jorda",
+    "title": "Jorden",
     "name": "Et av de eldgamle navnene på vår jord er",
     "radius": "Jorden vår har en ekvatorial radius på"
   },
