--- a/src/i18next/locales/no/translation.json
+++ b/src/i18next/locales/no/translation.json
@@ -98,6 +98,22 @@
     "source": "Pluto i Store norske leksikon på snl.no. Hentet 17. oktober 2022 fra https://snl.no/Pluto"
   },
 
+  "Uranus": {
+    "title": "Uranus",
+    "firstText": " UTTALE: urˈanus!!!! Uranus er den sjuende av planetene regnet fra Sola, og den tredje største planeten i solsystemet.",
+
+    "secondText": "Uranus er i likhet med Jupiter, Saturn og Neptun en gassplanet, nærmere bestemt en iskjempe. Uranus bruker 84,02 år på å fullføre et omløp rundt Sola.",
+
+    "thirdText": "Den gjennomsnittlige avstanden fra Sola er 2871 millioner kilometer, som er 19 ganger Jordas avstand.Uranus ble, i likhet med de andre planetene i solsystemet, dannet for rundt 4,5 milliarder år siden, like etter at Sola hadde blitt dannet.",
+
+    "factsTitle": "Fakta Om Uranus",
+    "factsRadius": "Radius ved ekvator (Jorda = 1) 4,007",
+    "factsSize": "Den nest ytterste planeten i solsystemet",
+    "factsSpeed": "Gjennomsnittsfart: 6,81 km/s",
+    "factsMoons": "Måner: 27 stk",
+    "source": "Ringnes, Truls; Aksnes, Kaare; Hammerstrøm, Maria: Uranus i Store norske leksikon på snl.no. Hentet 11. oktober 2022 fra https://snl.no/Uranus"
+  },
+
   "Footer": {
     "MadeBy": "Laget av:"
   }
