--- a/src/i18next/locales/en/translation.json
+++ b/src/i18next/locales/en/translation.json
@@ -112,6 +112,22 @@
     "source": "RIngnes, Truls; Aksnes, Kaare; Hammerstrøm, Maria: Uranus in Store norske lesikon at snl.no. Retrieved 11 October 2022 from https://snl.no/Uranus"
   },
 
+  "Mars": {
+    "title": "Mars",
+    "firstText": " Mars is the fourth planet counted from the Sun. It is the seventh largest planet in the solar system and has just over half the circumference of Earth. Like Mercury, Venus and Earth, it is a rocky planet.",
+
+    "secondText": "A day on Mars lasts 24.6 hours, not unlike a day on Earth (23.9 hours). A Martian day is called a sol, which is an abbreviation for 'solar day'.",
+
+    "thirdText": "Mars may have been more Earth-like 3.5 billion years ago. Formations on the surface indicate that water has been clean there in the past, while today the surface is dry.",
+
+    "factsTitle": "Facts About Mars",
+    "factsRadius": "Radius at the equator (Earth = 1) 0.532",
+    "factsSize": "The fourth planet in the solar system",
+    "factsSpeed": "Average speed: 24.1 km/s",
+    "factsMoons": "Moons: 2 pcs",
+    "source": "Aksnes, Kaare; Hammerstrøm, Maria: Mars in Store norske leksikon at snl.no. Retrieved 11 October 2022 from https://snl.no/Mars"
+  },
+
   "Footer": {
     "MadeBy": "Made by:"
   }
