--- a/src/i18next/locales/no/translation.json
+++ b/src/i18next/locales/no/translation.json
@@ -97,21 +97,36 @@
     "factsMoons": "Måner: 5 stk",
     "source": "Pluto i Store norske leksikon på snl.no. Hentet 17. oktober 2022 fra https://snl.no/Pluto"
   },
-
   "Uranus": {
     "title": "Uranus",
-    "firstText": " UTTALE: urˈanus!!!! Uranus er den sjuende av planetene regnet fra Sola, og den tredje største planeten i solsystemet.",
+    "firstText": " UTALE: urˈanus!!!! Uranus er den syvende av planetene fra solen, og den tredje største planeten i solsystemet.",
 
-    "secondText": "Uranus er i likhet med Jupiter, Saturn og Neptun en gassplanet, nærmere bestemt en iskjempe. Uranus bruker 84,02 år på å fullføre et omløp rundt Sola.",
+    "secondText": "I likhet med Jupiter, Saturn og Neptun er Uranus en gassplanet, nærmere bestemt en iskjempe. Uranus bruker 84,02 år på å fullføre én bane rundt solen.",
 
-    "thirdText": "Den gjennomsnittlige avstanden fra Sola er 2871 millioner kilometer, som er 19 ganger Jordas avstand.Uranus ble, i likhet med de andre planetene i solsystemet, dannet for rundt 4,5 milliarder år siden, like etter at Sola hadde blitt dannet.",
+    "thirdText": "Gjennomsnittlig avstand fra solen er 2871 millioner kilometer, som er 19 ganger avstanden til jorden. I likhet med de andre planetene i solsystemet ble Uranus dannet for rundt 4,5 milliarder år siden, like etter at solen var blitt dannet.",
 
-    "factsTitle": "Fakta Om Uranus",
-    "factsRadius": "Radius ved ekvator (Jorda = 1) 4,007",
+    "factsTitle": "Fakta About Uranus",
+    "factsRadius": "Radius (Jorden = 1) 4.007",
     "factsSize": "Den nest ytterste planeten i solsystemet",
-    "factsSpeed": "Gjennomsnittsfart: 6,81 km/s",
+    "factsSpeed": "Snitthastighet: 6,81 km/s",
     "factsMoons": "Måner: 27 stk",
-    "source": "Ringnes, Truls; Aksnes, Kaare; Hammerstrøm, Maria: Uranus i Store norske leksikon på snl.no. Hentet 11. oktober 2022 fra https://snl.no/Uranus"
+    "source": "Ringnes, Truls; Aksnes, Kaare; Hammerstrøm, Maria: Uranus i Store norske lesikon på snl.no. Hentet 11. oktober 2022 fra https://snl.no/Uranus"
+  },
+
+  "Mars": {
+    "title": "Mars",
+    "firstText": "Mars er den fjerde planeten regnet fra Sola. Den er den syvende største planeten i solsystemet og har litt over halvparten så stor omkrets som Jorda. Den er i likhet med Merkur, Venus og Jorda en steinplanet.",
+
+    "secondText": "Et døgn på Mars varer 24,6 timer, ikke ulikt et døgn på Jorda (23,9 timer). Et Mars-døgn kalles sol, som er en forkortelse for «solar day» (soldøgn).",
+
+    "thirdText": " Mars kan ha vært mer jordlignende for 3,5 milliarder år siden. Formasjoner på overflaten tyder på at vann har rent der tidligere, mens i dag er overflaten tørrlagt.",
+
+    "factsTitle": "Fakta Om Mars",
+    "factsRadius": "Radius ved ekvator (Jorda = 1) 0,532",
+    "factsSize": "Den fjerde planeten i solsystemet",
+    "factsSpeed": "Gjennomsnittsfart: 24,1 km/s",
+    "factsMoons": "Måner: 2 stk",
+    "source": "Aksnes, Kaare; Hammerstrøm, Maria: Mars i Store norske leksikon på snl.no. Hentet 11. oktober 2022 fra https://snl.no/Mars"
   },
 
   "Footer": {
