Updated text for pages

--- a/src/i18next/locales/en/translation.json
+++ b/src/i18next/locales/en/translation.json
@@ -18,7 +18,7 @@
     "firstText": " Mercury is the innermost and smallest planet in the solar system. It is only slightly larger than the Moon, and like Venus, Earth and Mars is a rocky planet.",
     "secondText": "The planet is gray in color and covered in craters, thus resembling the Moon in appearance. Signs of ice have been observed in craters in the polar regions that are never hit by sunlight. The surface is covered with small and large impact craters. The largest crater, Caloris, is 1,550 kilometers in diameter.",
     "thirdText": " On the opposite side of the planet there is a pattern of rings that are probably formed by shock waves after the impact that formed the Caloris crater. On the surface are found also volcanoes, but no active volcanoes have been observed.The first spacecraft to visit Mercury was Mariner 10 which arrived on the planet in 1974 and photographed almost half of the planet's surface with resolution down to 100 meters.",
-    "factsTitle": "Facts About Mars",
+    "factsTitle": "Facts About Mercury",
     "factsRadius": "Radius at the equator (Earth = 1) 0.532",
     "factsSize": "The planet closest to the sun",
     "factsSpeed": "Average speed: 47.87 km/s",
