--- a/src/i18next/locales/no/translation.json
+++ b/src/i18next/locales/no/translation.json
@@ -18,7 +18,7 @@
     "firstText": " Merkur er den innerste og minste planeten i solsystemet. Den er bare litt større enn Månen, og i likhet med Venus er Jorden og Mars en steinete planet.",
     "secondText": "Planeten er grå i fargen og dekket av kratere, og ligner dermed månen i utseende. Tegn på is er observert i kratere i polarområdene som aldri blir truffet av sollys. Overflaten er dekket av små og store nedslagskratere. Det største krateret, Caloris, er 1550 kilometer i diameter.",
     "thirdText": " På motsatt side av planeten er det et mønster av ringer som sannsynligvis er dannet av sjokkbølger etter nedslaget som dannet Caloris-krateret. På overflaten finnes også vulkaner, men ingen aktive vulkaner er observert. Det første romfartøyet som besøkte Mercury var Mariner 10 som ankom planeten i 1974 og fotograferte nesten halvparten av planetens overflate med oppløsning ned til 100 meter.",
-    "factsTitle": "Fakta om Mars",
+    "factsTitle": "Fakta om Merkur",
     "factsRadius": "Radius ved ekvator (Earth = 1) 0.532",
     "factsSize": "Planeten som er nærmest solen",
     "factsSpeed": "Gjennomsnittsfart: 47.87 km/s",
